Recognition de JavaScript

--- a/pages/chatGPT.html
+++ b/pages/chatGPT.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScrit ChatGPT Clone</title>
-    <link rel="stylesheet" href="../assets/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <section class="side-bar">
@@ -29,6 +29,6 @@
             Your feedback will help us improve.
         </p>
     </section>
-    <script src="../assets/app.js"></script>
+    <script src="../assets/js/app.js"></script>
 </body>
 </html>
