--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="shortcut icon" href="./assets/images/travel.png" type="image/x-icon">
     <title>Tarjetas y modal</title>
 </head>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="./pages/recognition.html">Recognition</a>
                     <a class="nav-link" href="./pages/chatGPT.html">Asistente</a>
                 </div>
             </div>
@@ -31,7 +31,7 @@
     </nav>
     <div class="container my-3">
         <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 py-4">
                 <!-- Button trigger modal -->
                 <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     Launch static backdrop modal
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
+            <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 py-4">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100 text-bg-dark mb-3">
