--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-bg-dark mb-3">
-                            <img src="./assets/images/aida.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/images/maria6.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural
