--- a/index.html
+++ b/index.html
@@ -31,35 +31,39 @@
     </nav>
     <div class="container my-3">
         <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 py-4" id="chat">
-                <section class="side-bar">
-                    <button>New Chat</button>
-                    <div class="history"></div>
-                    <nav class="nav-chat">
-                        <p>Made By Grupo FrontEnd</p>
-                    </nav>
-                </section>
-                <section class="main">
-                    <h1>Grupo FrontEnd</h1>
-                    <p id="output"></p>
-                    <div class="bottom-section">
-                        <div class="input-container">
-                            <input type="text" id="input-voz">
-                            <div id="submit">➢</div>
-                        </div>
-                    </div>
-                    <p class="info">ChatGPT Mar 14 Version. Free research Preview.
-                        Our goal is to make AI systems more natural and safe to interact with.
-                        Your feedback will help us improve.
-                    </p>
-                </section>
-            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 py-4"></div>
 
             <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 py-4">
                 <div class="row row-cols-1 row-cols-md-3 g-4" id="card">
-                    
+
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="container my-3">
+        <div id="chat">
+            <section class="side-bar">
+                <button>New Chat</button>
+                <div class="history"></div>
+                <nav class="nav-chat">
+                    <p>Made By Grupo FrontEnd</p>
+                </nav>
+            </section>
+            <section class="main">
+                <h1>Grupo FrontEnd</h1>
+                <p id="output"></p>
+                <div class="bottom-section">
+                    <div class="input-container">
+                        <input type="text" id="input-voz">
+                        <div id="submit">➢</div>
+                    </div>
+                </div>
+                <p class="info">ChatGPT Mar 14 Version. Free research Preview.
+                    Our goal is to make AI systems more natural and safe to interact with.
+                    Your feedback will help us improve.
+                </p>
+            </section>
         </div>
     </div>
 
