--- a/pages/recognition.html
+++ b/pages/recognition.html
@@ -9,7 +9,8 @@
 <body>
     <button id="comenzar">COMENZAR</button>
     <button id="detener">DETENER</button>
-    <textarea id="textArea" cols="30" rows="10"></textarea>
+    <button id="reproducir">REPRODUCIR</button>
+    <textarea id="textArea" cols="30" rows="10" onchange="leerTexto()"></textarea>
 
 
     <script src="../assets/js/recognition.js"></script>
