Muestra la torta

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
         crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <!-- <script src="./assets/js/api.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+        <!-- <script src="./assets/js/api.js"></script> -->
     <script src="./assets/js/app.js"></script>
     <script type="module" src="./assets/js/comentario.js"></script>
+    <script type="module" src="./assets/js/torta.js"></script>
 </body>
 
 </html>
