--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon"> -->
     <title>Agencia-Turismo</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="container my-3">
-        <img src="./assets/logo-title.png" class="title-logo">
+        <!-- <img src="./assets/logo-title.png" class="title-logo"> -->
     </div>
     <div class="container my-3" id="card">
     </div>
@@ -63,7 +63,7 @@
     <script src="./assets/js/app.js"></script>
     <!-- <script src="./assets/js/api.js" type="module"></script> -->
     <script type="module" src="./assets/js/torta.js"></script>
-    <script type="module" src="./assets/js/comentario.js"></script>
+    <!-- <script type="module" src="./assets/js/comentario.js"></script> -->
     
 </body>
 
